# jscomp

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.adoc  jsc  main.ts  package.json  tsd.json
acorn/src/: options.js  state.js  statement.js
bugs/: badcons.js  badfuncex.js  badpr.js  object-seal.js  parseint.js  regexpstr.js  tostr1.js
docs/: asm.adoc  hacking.adoc
examples/: factorial.js  inheritance.js
js/acorn/: acorn_csp.d.ts  acorn_csp.js
lib/: AssertionError.ts  StringMap.ts  bmh.ts
runtime/: CMakeLists.txt
runtime/examples/: ex1.cpp  test1.cxx
runtime/include/jsc/: common.h  config.h.in  dtoa.h  fs.h  jsimpl.h  jsni.h  jsruntime.h  objects.h  runtime.h  sort.h  typedarrays.h  uri.h  utf.h
runtime/js/: core.js  runtime.js
runtime/js/core/: 01core.js  02math.js  03date.js  03number.js  03typedarray.js  10regexp.js  11json.js  20module.js  90global.js  95init.js  96evloop.js
runtime/js/modules/: RegExp.js  _constants.js  _fs.js  _jsc.js  _node.js  _pipe_wrap.js  _stream_wrap.js  _tcp_wrap.js  _timer_wrap.js  _tty_wrap.js  assert.js  child_process.js  console.js  fs.js  process.js
runtime/js/modules/buffer/: index.js
runtime/js/nodelib/: net.js  util.js  versions.txt
runtime/src/: convert.cpp  fs.cpp  gc.cxx  handles.cpp  jsimpl.cpp  jsni.cpp  math.cpp  operators.cpp  runtime.cxx  sort.cpp  string.cpp  typedarrays.cxx  uri.cpp  utf.cxx
runtime/v8compat/include/: v8.h
src/: compiler.ts  cxxbackend.ts  estree-x.d.ts  hir.ts
tests/: apply.js  array-concat.js  array-foreach.js  array-shift.js  array-slice.js  array-sort1.js  array-splice.js  array_tostring.js  arrayjoin.js  binary.js  bind.js  defineprop.js  delete.js  empty.js  errors.js  hasownprop.js  iftrue.js  in.js  inittag.js  instanceof.js  isnan.js  json1.js  math1.js  mustprint0.js  mustprint10.js  naninf.js  object-keys.js  object-tostring.js  parsefloat.js  parseint.js  parseint2.js  proto.js  pushpop.js  quicksort-killer.js  regexp1.js  regexp2.js  regexp3-uni.js  sortbench1.js  sortbench2.js  sortbench3.js  (+22 more)
typings/: _overrides.d.ts  tsd.d.ts
typings/acorn/: acorn.d.ts
typings/acorn_csp/: acorn_csp.d.ts
(+2 files in other folders)
